Fix: force legacy-peer-deps for Vercel build

--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "vercel-build": "npm install --legacy-peer-deps && next build"
   },
+  
+
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "1.2.2",
