--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
+    "postcss": "^8.5",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
@@ -58,16 +59,15 @@
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
-    "zod": "^3.24.1",
-    "tailwindcss": "^3.4.17",
-    "postcss": "^8.5"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@types/node": "^22",
-    "@types/react": "^19",
+    "@types/node": "^22.17.0",
+    "@types/react": "^19.1.9",
     "@types/react-dom": "^19",
-    "typescript": "^5"
+    "typescript": "^5.9.2"
   }
 }
